--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+ .App {
   text-align: center;
 }
 
@@ -35,4 +35,92 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+text {
+  font-size: 100ox;
+  font-weight: bold;
+
+}
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table th, .table td {
+  border: 2px solid #dddddd;
+  padding: 10px;
+  text-align: left;
+}
+
+.table th {
+  background-color: #f2f2f2;
+}
+
+.table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.table tr:hover {
+  background-color: #dddddd; 
+}
+
+.table {
+  font-family: Arial, sans-serif;
+}
+
+.table table {
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 600px; 
+}
+
+.table th, .table td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd; 
+}
+
+.table th {
+  background-color: #f2f2f2; 
+}
+
+.table tbody tr:hover {
+  background-color: #f5f5f5; 
+}
+
+
+body {
+  background-color: rgb(70, 65, 65);
+}
+
+.img {
+  padding: 3px;
+}  
+
+.carousel-image {
+  object-fit: cover; /* Gambar diatur agar mengisi dengan baik kotak Carousel */
+  max-height: 400px; /* Batasi tinggi gambar */
+}
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); /* Transparan hitam untuk latar belakang caption */
+  padding: 20px; /* Berikan ruang padding untuk caption */
+}
+
+.carousel-title {
+  color: #fff; /* Warna teks putih */
+  font-size: 24px; /* Ukuran teks judul */
+}
+
+.carousel-text {
+  color: #ccc; /* Warna teks abu-abu */
+  font-size: 18px; /* Ukuran teks konten */
+}
+
+
+.navbar img {
+  padding: 3px;
+  width: 10px;
+  height: 10px;
 }
